# ChangeLog for net-p2p/dclib
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/net-p2p/dclib/ChangeLog,v 1.108 2009/06/08 18:39:23 armin76 Exp $

  01 Sep 2009; A. Vinogradov <spamslepnoga@inbox.ru> dclib-0.3.9999.ebuild:
  fix bad RDEPEND

  30 Aug 2009; AntiXpucT <i.am@antixpuct.ru> +dclib-0.3.9999.ebuild:
  SVN-ebuild for DCLib

*dclib-0.3.23 (08 Jun 2009)

  08 Jun 2009; Raúl Porcel <armin76@gentoo.org> +dclib-0.3.23.ebuild:
  Version bump

*dclib-0.3.21 (24 Sep 2008)

  24 Sep 2008; Raúl Porcel <armin76@gentoo.org> +dclib-0.3.21.ebuild:
  Version bump

  23 Aug 2008; Markus Meier <maekke@gentoo.org> dclib-0.3.18.ebuild:
  amd64 stable, bug #234660

  14 Aug 2008; Raúl Porcel <armin76@gentoo.org> -dclib-0.3.12.ebuild,
  dclib-0.3.18.ebuild:
  alpha/ia64/x86 stable

*dclib-0.3.19 (14 Aug 2008)

  14 Aug 2008; Raúl Porcel <armin76@gentoo.org> -dclib-0.3.14a.ebuild,
  +dclib-0.3.19.ebuild:
  Version bump

*dclib-0.3.18 (11 Jul 2008)

  11 Jul 2008; Raúl Porcel <armin76@gentoo.org> +dclib-0.3.18.ebuild:
  Version bump

  27 Jun 2008; Thomas Anderson <gentoofan23@gentoo.org> dclib-0.3.13.ebuild:
  stable amd64, bug 225029

  17 Jun 2008; Jeroen Roovers <jer@gentoo.org> dclib-0.3.13.ebuild:
  Stable for HPPA (bug #225029).

  07 Jun 2008; nixnut <nixnut@gentoo.org> dclib-0.3.13.ebuild:
  Stable on ppc wrt bug 225029

*dclib-0.3.14a (06 Jun 2008)

  06 Jun 2008; Raúl Porcel <armin76@gentoo.org> +dclib-0.3.14a.ebuild:
  Version bump

  06 Jun 2008; Markus Rothe <corsair@gentoo.org> dclib-0.3.13.ebuild:
  Stable on ppc64; bug #225029

  05 Jun 2008; Raúl Porcel <armin76@gentoo.org> dclib-0.3.13.ebuild:
  alpha/ia64/x86 stable

*dclib-0.3.13 (19 Apr 2008)

  19 Apr 2008; Raúl Porcel <armin76@gentoo.org> +dclib-0.3.13.ebuild:
  Version bump

  04 Feb 2008; Samuli Suominen <drac@gentoo.org> -dclib-0.3.10.ebuild,
  -dclib-0.3.11.ebuild, dclib-0.3.12.ebuild:
  amd64 stable
