@@ -2,6 +2,10 @@
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
 # $Header: /var/cvsroot/gentoo-x86/net-p2p/dclib/ChangeLog,v 1.108 2009/06/08 18:39:23 armin76 Exp $
 
+  20 Sep 2009; A. Vinogradov <spamslepnoga@inbox.ru>
+  -dclib-0.3.23_p3101.ebuild, +dclib-0.3.23_p3101-r1.ebuild:
+  revision bump, code clean
+
   01 Sep 2009; A. Vinogradov <spamslepnoga@inbox.ru> dclib-0.3.9999.ebuild:
   fix bad RDEPEND
 
